# TinyFarm

./: .gitignore  CMakeLists.txt  LICENSE  README-ZN.md  README.md  imgui.ini
assets/data/: actor_blueprint.json  animal_blueprint.json  crop_config.json  dialogue_script.json  dialogue_script_readme.md  game_time_config.json  icon_config.json  item_config.json  light_config.json  light_config_readme.md  map_loading_config.json  resource_mapping.json  ui_button_presets.json  ui_image_presets.json
assets/maps/: farm-rpg.tiled-project  farm-rpg.world  home_exterior.tmj  home_interior.tmj  school.tmj  town.tmj
assets/maps/tileset/: ALL props seasons.tsj  Birch Tree Animation.tsj  Fence Wood.tsj  Ground stones.tsj  Interior.tsj  Road.tsj  Tileset Grass Cliff Tileset Spring.tsj  Tileset Grass Spring.tsj  Tileset Grass Water Spring.tsj  Tileset House.tsj  Tilled Soil and wet soil.tsj  Water fountain.tsj  chest.tsj  house.tsj  props water.tsj  trees.tsj
assets/shaders/: blur.frag  color.frag  composite.frag  composite.vert  debug.frag  debug.vert  emissive.frag  emissive.vert  light.frag  light.vert  quad.vert  texture.frag
cmake/: BuildHelpers.cmake  Dependencies.cmake  ImGui.cmake  OpenGL.cmake  QUICK_REFERENCE.md  README.md
cmake/scripts/: CopyAssets.cmake  CopyConfig.cmake
config/: audio.json  input.json  render.json  text_render.json  window.json
docs/: audio_system.md  blueprints.md  debug_ui.md  ecs.md  entry_to_first_frame.md  events.md  farm_loop.md  game_scene.md  input_system.md  interaction_and_dialogue.md  inventory_hotbar.md  map_data_pipeline.md  map_manager.md  movement_and_collision.md  overview.md  player_control.md  rendering.md  resolution_and_viewport.md  resources.md  save_and_flow.md  scenes.md  spatial_index.md  text_rendering.md  time_and_lighting.md  ui_framework.md  world_state.md
src/: CMakeLists.txt  main.cpp
src/engine/audio/: audio_player.cpp  audio_player.h
src/engine/component/: animation_component.h  auto_tile_component.h  collider_component.h  light_component.h  name_component.h  parallax_component.h  render_component.h  sprite_component.h  tags.h  tilelayer_component.h  transform_component.h  velocity_component.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h  time.cpp  time.h
src/engine/debug/: debug_panel.h  debug_ui_manager.cpp  debug_ui_manager.h  dispatcher_trace.cpp  dispatcher_trace.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/loader/: basic_entity_builder.cpp  basic_entity_builder.h  level_loader.cpp  level_loader.h  tiled_conventions.h  tiled_diagnostics.h  tiled_json_cache.h  tiled_json_helpers.h
src/engine/render/: camera.cpp  camera.h  image.cpp  image.h  lighting_state.h  nine_slice.cpp  nine_slice.h  renderer.cpp  renderer.h  text_renderer.cpp  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  auto_tile_library.cpp  auto_tile_library.h  font_manager.cpp  font_manager.h  resource_debug_info.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/spatial/: collider_shape.h  collision_resolver.cpp  collision_resolver.h  dynamic_entity_grid.cpp  dynamic_entity_grid.h  spatial_index_manager.cpp  spatial_index_manager.h  static_tile_grid.cpp  static_tile_grid.h
src/engine/system/: animation_system.cpp  animation_system.h  audio_system.cpp  audio_system.h  fwd.h  (+16 more)
src/game/: game_entry.cpp  game_entry.h
tests/: CMakeLists.txt
tests/data/: item_use_items.json  ui_button_presets_sounds_test.json
tests/engine/: factory_visibility_test.cpp
tests/engine/audio/: audio_player_no_exceptions_test.cpp  audio_player_test.cpp
tests/engine/core/: config_factory_api_test.cpp  ecs_safety_test.cpp  game_app_dispatcher_trace_test.cpp  game_app_no_exceptions_test.cpp  time_test.cpp
tests/engine/debug/: dispatcher_trace_test.cpp
tests/engine/input/: input_manager_no_exceptions_test.cpp  input_manager_test.cpp
tests/engine/loader/: basic_entity_builder_no_json_value_test.cpp  level_loader_layer_name_test.cpp  level_loader_no_exceptions_test.cpp  level_loader_no_json_value_test.cpp  level_loader_tile_flag_warning_test.cpp
tests/engine/render/: nine_slice_test.cpp  render_context_no_exceptions_test.cpp  sprite_batch_source_test.cpp  text_renderer_no_exceptions_test.cpp
tests/engine/resource/: font_manager_create_test.cpp  resource_manager_filesystem_no_exceptions_test.cpp  resource_manager_no_exceptions_test.cpp
tests/engine/scene/: entry_to_first_frame_safety_test.cpp  scene_manager_safety_test.cpp
tests/engine/spatial/: dynamic_entity_grid_test.cpp  spatial_index_manager_raii_test.cpp  spatial_index_manager_sweep_result_test.cpp  static_tile_grid_rect_query_test.cpp  static_tile_grid_sweep_test.cpp
tests/engine/system/: movement_system_dynamic_grid_sync_test.cpp  remove_entity_system_test.cpp  render_system_view_use_test.cpp
tests/engine/ui/: ui_button_factory_api_test.cpp  ui_preset_manager_debug_api_test.cpp  ui_preset_manager_invalid_input_test.cpp  ui_preset_manager_no_exceptions_test.cpp  ui_preset_manager_sound_test.cpp
tests/game/: action_sound_system_test.cpp  blueprint_manager_smoke_test.cpp  farm_system_harvest_inventory_full_test.cpp  farm_system_hoe_blocking_test.cpp  game_scene_light_toggle_hook_test.cpp  inventory_hotbar_consistency_test.cpp  item_use_system_test.cpp  light_toggle_system_test.cpp  map_loading_settings_test.cpp  pause_menu_scene_save_load_disabled_test.cpp  player_control_system_targeting_test.cpp  rest_area_interaction_test.cpp  save_slot_summary_test.cpp  state_system_dirty_tag_test.cpp  time_advance_sleep_test.cpp  time_of_day_light_system_test.cpp  title_scene_menu_button_test.cpp  world_state_test.cpp
tools/: CMakeLists.txt
tools/ui_tester/: main.cpp  ui_test_scene.cpp  ui_test_scene.h
tools/visual_tester/: main.cpp  visual_test_case.h  visual_test_cases.cpp  visual_test_cases.h  visual_test_suite_scene.cpp  visual_test_suite_scene.h
(+228 files in other folders)
